--- a/ui/thread-view.scss
+++ b/ui/thread-view.scss
@@ -1,78 +1,34 @@
 /* ui-version: 4 (do not change when modifying theme for yourself) */
 /* Variables */
-@if not(global-variable-exists(background-color)) {
-  $background-color: #ccc !global;
-}
+$background-color: #ccc !default;
 
 /* Background colors associated with received emails: */
-@if not(global-variable-exists(recv-normal)) {
-  $recv-normal: #ffffff !global;
-}
-@if not(global-variable-exists(recv-quoted)) {
-  $recv-quoted: #e8e8e8 !global;
-}
-@if not(global-variable-exists(recv-collapsed)) {
-  $recv-collapsed: #f5f5f5 !global;
-}
+$recv-normal: #ffffff !default;
+$recv-quoted: #e8e8e8 !default;
+$recv-collapsed: #f5f5f5 !default;
 
 /* Background colors associated with sent emails: */
-@if not(global-variable-exists(sent-normal)) {
-  $sent-normal: #ffffff !global;
-}
-
-@if not(global-variable-exists(sent-quoted)) {
-  $sent-quoted: #e8e8e8 !global;
-}
-
-@if not(global-variable-exists(sent-collapsed)) {
-  $sent-collapsed: #f5f5f5 !global;
-}
+$sent-normal: #ffffff !default;
+$sent-quoted: #e8e8e8 !default;
+$sent-collapsed: #f5f5f5 !default;
 
 /* Fonts */
-@if not(global-variable-exists(font-base-size)) {
-  $font-base-size: 16px !global;
-}
-
-@if not(global-variable-exists(font-mono)) {
-  $font-mono: monospace !global;
-}
-
-@if not(global-variable-exists(font-sans)) {
-  $font-sans: sans-serif !global;
-}
-
-@if not(global-variable-exists(font-family-default)) {
-  $font-family-default: $font-sans !global;
-}
+$font-base-size: 16px !default;
+$font-mono: monospace !default;
+$font-sans: sans-serif !default;
+$font-family-default: $font-sans !default;
 
 /* Colours */
-@if not(global-variable-exists(email-solid)) {
-  $email-solid: #d8d8d8 !global;
-}
-
-@if not(global-variable-exists(focused-solid)) {
-  $focused-solid: #4a90d9 !global;
-}
-
-@if not(global-variable-exists(sibling-color)) {
-  $sibling-color: lighten( $focused-solid, 20%) !global;
-}
-
-@if not(global-variable-exists(attachment-color)) {
-  $attachment-color:  $sibling-color !global;
-}
-
-@if not(global-variable-exists(mime-color)) {
-  $mime-color: lighten( #FFFF00, 15%) !global;
-}
-
-@if not(global-variable-exists(encrypted)) {
-  $encrypted: #99cc66 !global;
-}
-
-@if not(global-variable-exists(signed)) {
-  $signed: #cccc66 !global;
-}
+$email-solid: #d8d8d8 !default;
+$focused-solid: #4a90d9 !default;
+$sibling-color: lighten($focused-solid, 20%) !default;
+$attachment-color: $sibling-color !default;
+$mime-color: lighten( #FFFF00, 15%) !default;
+$encrypted: #99cc66 !default;
+$signed: #cccc66 !default;
+$quote-color1: #5555ee !default;
+$quote-color2: #425c78 !default;
+$quote-color3: #729fcf !default;
 
 @media print {
 
@@ -948,85 +904,30 @@ blockquote {
     padding-left: 15px;
     padding-right: 15px;
     border: 0;
-    /*border-left: 3px #aaa solid;*/
-    border-left: #5555EE solid 0.2em;
-    color: #5555ee;
-}
+    border-left-width: 0.2em;
+    border-left-style: solid;
+    border-left-color: $quote-color1;
+    color: $quote-color1;
 
-blockquote.level_001 {
-  margin-bottom: 0px;
-  margin-top: 0px;
-}
+    .level_001 {
+        margin-bottom: 0px;
+        margin-top: 0px;
+    }
 
-blockquote > blockquote {
-    border-left: #425c78 solid 0.2em;
-    color: #425c78;
-    margin-left: 0;
-}
+    $quote-colors: $quote-color3 $quote-color1 $quote-color2;
 
-blockquote > blockquote > blockquote {
-    border-left: #729fcf solid 0.2em;
-    color: #729fcf;
-}
-
-blockquote > blockquote > blockquote > blockquote {
-    border-left: #5555EE solid 0.2em;
-    color: #5555ee;
-}
-
-blockquote > blockquote > blockquote > blockquote > blockquote {
-    border-left: #425c78 solid 0.2em;
-    color: #425c78;
-}
-
-blockquote > blockquote > blockquote > blockquote > blockquote > blockquote {
-    border-left: #729fcf solid 0.2em;
-    color: #729fcf;
-}
-
-blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote {
-    border-left: #5555EE solid 0.2em;
-    color: #5555ee;
-}
-
-blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote {
-    border-left: #425c78 solid 0.2em;
-    color: #425c78;
-}
-
-blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote {
-    border-left: #729fcf solid 0.2em;
-    color: #729fcf;
-}
-
-blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote {
-    border-left: #5555EE solid 0.2em;
-    color: #5555ee;
-}
-
-blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote {
-    border-left: #425c78 solid 0.2em;
-    color: #425c78;
-}
-
-blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote {
-    border-left: #729fcf solid 0.2em;
-    color: #729fcf;
-}
-
-blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote {
-    border-left: #5555EE solid 0.2em;
-    color: #5555ee;
-}
-
-blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote {
-    border-left: #425c78 solid 0.2em;
-    color: #425c78;
-}
-
-blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote > blockquote {
-    border-left: #729fcf solid 0.2em;
-    color: #729fcf;
+    @for $l from 1 through 9 {
+        .level_00#{$l} {
+            border-left-color: nth($quote-colors, $l % 3 + 1);
+            color: nth($quote-colors, $l % 3 + 1);
+        }
+    }
+    @for $l from 10 through 15 {
+        .level_0#{$l} {
+            border-left-color: nth($quote-colors, $l % 3 + 1);
+            color: nth($quote-colors, $l % 3 + 1);
+        }
+    }
 }
 
 .search_coloring *::selection {
